test/interp/spec/func.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/func.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/func.wast:283:65: type mismatch of function result. got i32, expected i64
  (module (func $type-local-num-vs-num (result i64) (local i32) (get_local 0)))
                                                                ^
assert_invalid error:
  third_party/testsuite/func.wast:287:61: type mismatch of convert op. got f32, expected i32
  (module (func $type-local-num-vs-num (local f32) (i32.eqz (get_local 0))))
                                                            ^
assert_invalid error:
  third_party/testsuite/func.wast:291:65: type mismatch of unary op. got i64, expected f64
  (module (func $type-local-num-vs-num (local f64 i64) (f64.neg (get_local 1))))
                                                                ^
assert_invalid error:
  third_party/testsuite/func.wast:299:65: type mismatch of function result. got i32, expected i64
  (module (func $type-param-num-vs-num (param i32) (result i64) (get_local 0)))
                                                                ^
assert_invalid error:
  third_party/testsuite/func.wast:303:61: type mismatch of convert op. got f32, expected i32
  (module (func $type-param-num-vs-num (param f32) (i32.eqz (get_local 0))))
                                                            ^
assert_invalid error:
  third_party/testsuite/func.wast:307:65: type mismatch of unary op. got i64, expected f64
  (module (func $type-param-num-vs-num (param f64 i64) (f64.neg (get_local 1))))
                                                                ^
assert_invalid error:
  third_party/testsuite/func.wast:315:12: type mismatch of function result. got void, expected i32
  (module (func $type-empty-i32 (result i32)))
           ^^^^
assert_invalid error:
  third_party/testsuite/func.wast:319:12: type mismatch of function result. got void, expected i64
  (module (func $type-empty-i64 (result i64)))
           ^^^^
assert_invalid error:
  third_party/testsuite/func.wast:323:12: type mismatch of function result. got void, expected f32
  (module (func $type-empty-f32 (result f32)))
           ^^^^
assert_invalid error:
  third_party/testsuite/func.wast:327:12: type mismatch of function result. got void, expected f64
  (module (func $type-empty-f64 (result f64)))
           ^^^^
assert_invalid error:
  third_party/testsuite/func.wast:333:5: type mismatch in nop. got void, expected i32
    (nop)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:339:5: type mismatch of function result. got f32, expected i32
    (f32.const 0)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:345:28: type mismatch in nop. got void, expected i32
    (return (i32.const 1)) (nop)
                           ^
assert_invalid error:
  third_party/testsuite/func.wast:351:28: type mismatch of function result. got f32, expected i32
    (return (i32.const 1)) (f32.const 0)
                           ^
assert_invalid error:
  third_party/testsuite/func.wast:357:26: type mismatch in nop. got void, expected i32
    (br 0 (i32.const 1)) (nop)
                         ^
assert_invalid error:
  third_party/testsuite/func.wast:363:26: type mismatch of function result. got f32, expected i32
    (br 0 (i32.const 1)) (f32.const 0)
                         ^
assert_invalid error:
  third_party/testsuite/func.wast:370:5: type mismatch of return. got void, expected i32
    (return)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:376:5: type mismatch of return. got void, expected i32
    (return) (i32.const 1)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:382:13: type mismatch of return. got i64, expected i32
    (return (i64.const 1)) (i32.const 1)
            ^
assert_invalid error:
  third_party/testsuite/func.wast:388:13: type mismatch of return. got i64, expected i32
    (return (i64.const 1)) (return (i32.const 1))
            ^
assert_invalid error:
  third_party/testsuite/func.wast:394:36: type mismatch of return. got f64, expected i32
    (return (i32.const 1)) (return (f64.const 1))
                                   ^
assert_invalid error:
  third_party/testsuite/func.wast:401:5: type mismatch of br value. got void, expected i32
    (br 0)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:407:5: type mismatch of br value. got void, expected i32
    (br 0) (i32.const 1)
    ^
assert_invalid error:
  third_party/testsuite/func.wast:413:11: type mismatch of br value. got i64, expected i32
    (br 0 (i64.const 1)) (i32.const 1)
          ^
assert_invalid error:
  third_party/testsuite/func.wast:419:11: type mismatch of br value. got i64, expected i32
    (br 0 (i64.const 1)) (br 0 (i32.const 1))
          ^
assert_invalid error:
  third_party/testsuite/func.wast:425:32: type mismatch of br value. got f64, expected i32
    (br 0 (i32.const 1)) (br 0 (f64.const 1))
                               ^
assert_invalid error:
  third_party/testsuite/func.wast:432:12: type mismatch of br value. got void, expected i32
    (block (br 1)) (br 0 (i32.const 1))
           ^
assert_invalid error:
  third_party/testsuite/func.wast:438:18: type mismatch of br value. got i64, expected i32
    (block (br 1 (i64.const 1))) (br 0 (i32.const 1))
                 ^
78/78 tests passed.
;;; STDOUT ;;)
